--- a/views/playerComputer.html
+++ b/views/playerComputer.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="choices" class="choices">
-        <button class="selection" onclick="playGame('rock')">✊</button>
-        <button class="selection" onclick="playGame('paper')">🤚</button>
-        <button class="selection" onclick="playGame('scissors')">✌</button>
+        <button class="selection" id="rockBtn" onclick="playGame('rock')">✊</button>
+        <button class="selection" id="paperBtn" onclick="playGame('paper')">🤚</button>
+        <button class="selection" id="scissorsBtn" onclick="playGame('scissors')">✌</button>
     </div>
     <div id="playerDisplay" class="gameStyle">Player: </div>
     <div id="computerDisplay" class="gameStyle">Computer: </div>
