--- a/views/computerComputer.html
+++ b/views/computerComputer.html
@@ -8,14 +8,12 @@
 </head>
 <body>
     <div id="choices" class="choices">
-        <button class="gameStyle" onclick="playGame('newGame')">Click to play</button>
+        <button id="clickToPlay" class="gameStyle" onclick="playGame('newGame')">Click to play</button>
     </div>
     <div id="computer_1_Display" class="gameStyle">Computer_1: </div>
     <div id="computer_2_Display" class="gameStyle">Computer_2: </div>
     <div id="resultDisplay" class="gameStyle">Result: </div>
 
-    <!-- <div class="result-selection winner">✊</div>
-    <div class="result-selection">✌</div> -->
     <script src="../JS/computerComputer.js"></script>
 </body>
 </html>
